@@ -17,12 +17,13 @@
 
 package cn.vbill.middleware.porter.core;
 
-import com.alibaba.fastjson.JSON;
-import com.alibaba.fastjson.JSONObject;
 import cn.vbill.middleware.porter.common.cluster.data.DNode;
 import cn.vbill.middleware.porter.common.dic.NodeHealthLevel;
-import cn.vbill.middleware.porter.common.node.Node;
 import cn.vbill.middleware.porter.common.dic.NodeStatusType;
+import cn.vbill.middleware.porter.common.node.Node;
+import com.alibaba.fastjson.JSON;
+import com.alibaba.fastjson.JSONObject;
+
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.context.ApplicationContext;
@@ -39,7 +40,11 @@ import java.util.concurrent.locks.ReentrantReadWriteLock;
  * @version: V1.0
  * @review: zhangkewei[zhang_kw@suixingpay.com]/2018年02月24日 16:03
  */
-public enum  NodeContext {
+public enum NodeContext {
+
+    /**
+     * INSTANCE
+     */
     INSTANCE();
     private final ReadWriteLock nodeLock = new ReentrantReadWriteLock();
     private final Node node = new Node();
@@ -49,6 +54,14 @@ public enum  NodeContext {
     private final Map<String, Object> consumerIdle = new ConcurrentHashMap<>();
 
     private ApplicationContext context;
+
+    /**
+     * 获取Bean
+     *
+     * @date 2018/8/8 下午5:22
+     * @param: [clazz]
+     * @return: T
+     */
     public <T> T getBean(Class<T> clazz) {
         return null != context ? context.getBean(clazz) : null;
     }
@@ -57,6 +70,13 @@ public enum  NodeContext {
         this.context = context;
     }
 
+    /**
+     * syncNodeId
+     *
+     * @date 2018/8/8 下午5:22
+     * @param: [nodeId]
+     * @return: void
+     */
     public void syncNodeId(String nodeId) {
         try {
             nodeLock.writeLock().lock();
@@ -66,6 +86,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * NodeStatus
+     *
+     * @date 2018/8/8 下午5:22
+     * @param: [status]
+     * @return: void
+     */
     public void syncNodeStatus(NodeStatusType status) {
         try {
             nodeLock.writeLock().lock();
@@ -75,6 +102,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * 获取NodeId
+     *
+     * @date 2018/8/8 下午5:36
+     * @param: []
+     * @return: java.lang.String
+     */
     public String getNodeId() {
         try {
             nodeLock.readLock().lock();
@@ -84,6 +118,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * 获取NodeStatus
+     *
+     * @date 2018/8/8 下午5:36
+     * @param: []
+     * @return: cn.vbill.middleware.porter.common.dic.NodeStatusType
+     */
     public NodeStatusType getNodeStatus() {
         try {
             nodeLock.readLock().lock();
@@ -93,6 +134,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * syncUploadStatistic
+     *
+     * @date 2018/8/8 下午5:36
+     * @param: [uploadStatistic]
+     * @return: void
+     */
     public void syncUploadStatistic(boolean uploadStatistic) {
         try {
             nodeLock.writeLock().lock();
@@ -102,6 +150,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * 是否UploadStatistic
+     *
+     * @date 2018/8/8 下午5:37
+     * @param: []
+     * @return: boolean
+     */
     public boolean isUploadStatistic() {
         try {
             nodeLock.readLock().lock();
@@ -111,6 +166,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * syncHealthLevel
+     *
+     * @date 2018/8/8 下午5:37
+     * @param: [level, desc]
+     * @return: void
+     */
     private void syncHealthLevel(NodeHealthLevel level, String desc) {
         try {
             nodeLock.writeLock().lock();
@@ -121,6 +183,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * 获取HealthLevel
+     *
+     * @date 2018/8/8 下午5:37
+     * @param: []
+     * @return: org.apache.commons.lang3.tuple.Pair<cn.vbill.middleware.porter.common.dic.NodeHealthLevel,java.lang.String>
+     */
     public Pair<NodeHealthLevel, String> getHealthLevel() {
         try {
             nodeLock.readLock().lock();
@@ -130,6 +199,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * updateWorkLimit
+     *
+     * @date 2018/8/8 下午5:38
+     * @param: [limit]
+     * @return: void
+     */
     public void updateWorkLimit(Integer limit) {
         try {
             nodeLock.writeLock().lock();
@@ -146,6 +222,7 @@ public enum  NodeContext {
      * 粗粒度的node lock加上细粒度的workUsed乐观锁
      * 如果申请work失败，则丧失执行任务的机会
      * 最坏结果是所有运行节点都没有资源用于执行该任务
+     *
      * @return
      */
     public boolean acquireWork() {
@@ -167,6 +244,7 @@ public enum  NodeContext {
 
     /**
      * 释放work资源
+     *
      * @return
      */
     public void releaseWork() {
@@ -183,6 +261,13 @@ public enum  NodeContext {
         tagHealthLevelWhenWorkChange();
     }
 
+    /**
+     * resetHealthLevel
+     *
+     * @date 2018/8/8 下午5:39
+     * @param: []
+     * @return: void
+     */
     public void resetHealthLevel() {
         syncHealthLevel(NodeHealthLevel.GREEN, "");
     }
@@ -198,7 +283,7 @@ public enum  NodeContext {
             try {
                 nodeLock.readLock().lock();
                 int nowCounter = node.getWorkUsed().get();
-                percent = new Double(nowCounter) / new Double(node.getWorkLimit());
+                percent = Double.valueOf(nowCounter) / Double.valueOf(node.getWorkLimit());
             } finally {
                 nodeLock.readLock().unlock();
             }
@@ -217,6 +302,13 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * removeTaskError
+     *
+     * @date 2018/8/8 下午5:39
+     * @param: [taskId]
+     * @return: void
+     */
     public void removeTaskError(String taskId) {
         taskErrorMarked.remove(taskId);
         if (taskErrorMarked.isEmpty()) {
@@ -224,19 +316,47 @@ public enum  NodeContext {
         }
     }
 
+    /**
+     * markTaskError
+     *
+     * @date 2018/8/8 下午5:39
+     * @param: [taskId, e]
+     * @return: void
+     */
     public void markTaskError(String taskId, String e) {
         taskErrorMarked.put(taskId, taskId);
         syncHealthLevel(NodeHealthLevel.RED, e);
     }
 
+    /**
+     * flushClusterNode
+     *
+     * @date 2018/8/8 下午5:40
+     * @param: [dnode]
+     * @return: void
+     */
     public void flushClusterNode(DNode dnode) {
         node.setDnodeSnapshot(dnode);
     }
 
+    /**
+     * flushConsumeProcess
+     *
+     * @date 2018/8/8 下午5:40
+     * @param: [key, position]
+     * @return: void
+     */
     public void flushConsumeProcess(String key, String position) {
         consumeProcess.put(key, position);
     }
 
+    /**
+     * flushConsumerIdle
+     *
+     * @date 2018/8/8 下午5:40
+     * @param: [taskId, swimlaneId, secondsTime]
+     * @return: void
+     */
     public void flushConsumerIdle(String taskId, String swimlaneId, long secondsTime) {
         if (secondsTime > 0) {
             consumerIdle.put(taskId + "_" + swimlaneId, secondsTime + "s");
@@ -249,12 +369,20 @@ public enum  NodeContext {
         return Collections.unmodifiableMap(taskErrorMarked);
     }
 
+    /**
+     * dumpNode
+     *
+     * @date 2018/8/8 下午5:41
+     * @param: []
+     * @return: java.lang.String
+     */
     public String dumpNode() {
         JSONObject object = (JSONObject) JSON.toJSON(node);
         object.put("consumeProcess", Collections.unmodifiableMap(consumeProcess));
         object.put("consumerIdle", Collections.unmodifiableMap(consumerIdle));
         return object.toJSONString();
     }
+
     public String[] getEnvironment() {
         return context.getEnvironment().getActiveProfiles();
     }
